Building header - Adding elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conference Website</title>
+    <title>ICACIE</title>
     <link href="https://fonts.cdnfonts.com/css/optima" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -12,9 +12,22 @@
 <body>
     <div class="container">
         <header class="header">
+            <img src="img/mainLogo.png" alt="UDM Logo" class="logo">
             <nav class="nav-top">
-                Navigation
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Call for papers</a>
             </nav>
+            <form action="#" class="search">
+                <input type="text" class="search__input">
+                <button class="search_button">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+            </form>
+            <div class="user-profile">
+                <img src="img/user.png" alt="Profile Thumbnail" class="user-profile__thumbnail">
+                <span class="user-profile__username">Khevin</span>
+            </div>
         </header>
         <div class="content">
             <main class="conf-info">
@@ -23,5 +36,6 @@
         </div>
         <footer class="footer">Footer</footer>
     </div>
+    <script src="https://kit.fontawesome.com/832a5f1165.js" crossorigin="anonymous"></script>
 </body>
 </html>
