Building and designing the home banner

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICACIE</title>
+    <title>ICACIE 2023 - Home</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="https://fonts.cdnfonts.com/css/optima" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
@@ -14,7 +14,7 @@
     <div class="container">
         <header class="header">
             
-                <img src="img/mainLogo.png" alt="UDM Logo" class="logo">
+                <img src="img/mainLogo.png" alt="UDM Logo" class="header__logo">
                 <form action="#" class="search">
                     <input type="text" placeholder="Search..." class="search__input">
                     <button class="search__button">
@@ -36,7 +36,23 @@
         </nav>
         <div class="content">
             <main class="conf-info">
-                <div class="home-banner">Banner</div>
+                <div class="home-banner">
+                    <div class="banner__title">
+                        <img src="img/logo-icacie.png" alt="ICACIE Logo" class="banner__logo">
+                        <h1>7th International Conference on Advanced Computing and Intelligent Engineering</h1>
+                        <div class="banner__subtitle">
+                            <h2>[ICACIE 2023]</h2>
+                        </div>
+                    </div>
+                    <div class="banner__info">
+                        <div class="banner__venue">
+                            <h2><i class="fa-sharp fa-solid fa-location-dot banner__icon"></i>Université Des Mascareignes, Mauritius</h2>
+                        </div>
+                        <div class="banner__date">
+                            <h2><i class="fa-solid fa-calendar-days banner__icon"></i>July/August 2023</h2>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
         <footer class="footer">Footer</footer>
