Building and designing the footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICACIE 2023 - Home</title>
+    <title>Home - ICACIE 2023</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="https://fonts.cdnfonts.com/css/optima" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <div class="home-banner">
                     <div class="banner__title">
                         <img src="img/logo-icacie.png" alt="ICACIE Logo" class="banner__logo">
-                        <h1>7th International Conference on Advanced Computing and Intelligent Engineering</h1>
+                        <h1>7<sup>th</sup> International Conference on Advanced Computing and Intelligent Engineering</h1>
                         <div class="banner__subtitle">
                             <h2>[ICACIE 2023]</h2>
                         </div>
@@ -55,7 +55,24 @@
                 </div>
             </main>
         </div>
-        <footer class="footer">Footer</footer>
+        <footer class="footer">
+            <div class="footer__content">
+                <img src="img/footerLogo.png" alt="UDM Logo" class="footer__logo">
+                <div class="footer__social">
+                    <p id="connect">connect with us</p>
+                    <div class="footer__socialicons">
+                        <i class="fa-brands fa-facebook footer__icon footer__icon--facebook"></i>
+                        <i class="fa-brands fa-instagram footer__icon footer__icon--instagram"></i>
+                        <i class="fa-brands fa-twitter footer__icon footer__icon--twitter"></i>
+                        <i class="fa-brands fa-linkedin footer__icon footer__icon--linkedin"></i>
+                        <i class="fa-brands fa-youtube footer__icon footer__icon--youtube"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <p>Copyright &copy; 2023 | All rights reserved</p>
+            </div>
+        </footer>
     </div>
     <script>
         window.onscroll = function() {
