Designing home page content

--- a/index.html
+++ b/index.html
@@ -37,20 +37,35 @@
         <div class="content">
             <main class="conf-info">
                 <div class="home-banner">
-                    <div class="banner__title">
+                    <div class="banner-title">
                         <img src="img/logo-icacie.png" alt="ICACIE Logo" class="banner__logo">
                         <h1>7<sup>th</sup> International Conference on Advanced Computing and Intelligent Engineering</h1>
                         <div class="banner__subtitle">
                             <h2>[ICACIE 2023]</h2>
                         </div>
                     </div>
-                    <div class="banner__info">
+                    <div class="banner-info">
                         <div class="banner__venue">
                             <h2><i class="fa-sharp fa-solid fa-location-dot banner__icon"></i>Université Des Mascareignes, Mauritius</h2>
                         </div>
                         <div class="banner__date">
                             <h2><i class="fa-solid fa-calendar-days banner__icon"></i>July/August 2023</h2>
                         </div>
+                    </div>
+                </div>
+                <div class="home-content">
+                    <div class="content-main">
+                        <div class="content-box">
+                            <h2 class="content-box__title">Welcome to ICACIE 2023</h2>
+                            <p class="content-box__text">ICACIE 2023 focuses on both theory and applications in the broad areas of advanced computing and intelligent engineering. ICACIE is a multidisciplinary conference organized with the objective of bringing together academicians, scientists, researchers from industry, research scholars, and students working in all areas of advanced computing and intelligent engineering. The conference will provide the authors and listeners with opportunities for national and international collaboration and networking among universities and institutions from India and abroad for promoting research and developing technologies. The aim of this conference is to promote the translation of basic research into applied investigation and convert applied investigation into the practice. This conference will also create awareness about the importance of basic scientific research in different fields matching the current trends. The conference will provide the flavor of keynote lectures by eminent speakers from different areas & panel discussions by industry people. The scope of the conference includes all areas of Advanced Computing and Intelligent Engineering.</p>
+                        </div>
+                        <div class="content-box content-box--grey">
+                            <h2 class="content-box__title">Keynote and Invited Speakers</h2>
+                            
+                        </div>
+                    </div>
+                    <div class="content-aside">
+aszie
                     </div>
                 </div>
             </main>
