Designing home page speakers section

--- a/index.html
+++ b/index.html
@@ -57,12 +57,67 @@
                     <div class="content-main">
                         <div class="content-box">
                             <h2 class="content-box__title">Welcome to ICACIE 2023</h2>
-                            <p class="content-box__text">ICACIE 2023 focuses on both theory and applications in the broad areas of advanced computing and intelligent engineering. ICACIE is a multidisciplinary conference organized with the objective of bringing together academicians, scientists, researchers from industry, research scholars, and students working in all areas of advanced computing and intelligent engineering. The conference will provide the authors and listeners with opportunities for national and international collaboration and networking among universities and institutions from India and abroad for promoting research and developing technologies. The aim of this conference is to promote the translation of basic research into applied investigation and convert applied investigation into the practice. This conference will also create awareness about the importance of basic scientific research in different fields matching the current trends. The conference will provide the flavor of keynote lectures by eminent speakers from different areas & panel discussions by industry people. The scope of the conference includes all areas of Advanced Computing and Intelligent Engineering.</p>
+                            <p class="content-box__text">ICACIE 2023 focuses on both theory and applications in the broad areas of advanced computing and intelligent engineering. ICACIE is a multidisciplinary conference organized with the objective of bringing together academicians, scientists, researchers from industry, research scholars, and students working in all areas of advanced computing and intelligent engineering.</p> 
+                            <p class="content-box__text">The conference will provide the authors and listeners with opportunities for national and international collaboration and networking among universities and institutions from India and abroad for promoting research and developing technologies. The aim of this conference is to promote the translation of basic research into applied investigation and convert applied investigation into the practice.</p>
+                            <p class="content-box__text">This conference will also create awareness about the importance of basic scientific research in different fields matching the current trends. The conference will provide the flavor of keynote lectures by eminent speakers from different areas & panel discussions by industry people. The scope of the conference includes all areas of Advanced Computing and Intelligent Engineering.</p>
                         </div>
                         <div class="content-box content-box--grey">
                             <h2 class="content-box__title">Keynote and Invited Speakers</h2>
-                            
+                            <div class="speaker-list">
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="speaker-box">
+                                    <img src="img/profile-icon.jpg" alt="Speaker Photo" class="speaker__picture">
+                                    <div class="speaker">
+                                        <h3 class="speaker__name">Michele Miller</h3>
+                                        <h4 class="speaker__title">Web Developer</h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        <div class="content-box">
+                            <h2 class="content-box__title">Publication Partners</h2>
+                            </div>
                     </div>
                     <div class="content-aside">
 aszie
