Designing publication partners and journals support section

--- a/index.html
+++ b/index.html
@@ -115,9 +115,44 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="content-box">
+                        <div class="content-box content-box--publication">
                             <h2 class="content-box__title">Publication Partners</h2>
+                            <div class="publication">
+                                <div class="publication-text">
+                                    <p class="content-box__text">Proceedings of the 7<sup>th</sup> ICACIE 2022 will be published in the <em><a class="content-box__link" href="https://www.springer.com/series/15179">Lecture Notes in Networks and Systems</a></em> series of Springer.</p>    
+                                    <p class="content-box__text"><strong>Indexing:</strong> This series is indexed by leading indexing services including <em>SCOPUS, Web of Science, Google Scholar, INSPEC, WTI Frankfurt eG, zbMATH, and SCImago</em></p>
+                                </div>
+                                <a href="https://www.springer.com/series/15179"><img src="img/lecture-notes.jpg" alt="Lecture notes in networks and systems series" class="publication__image"></a>
                             </div>
+                        </div>
+                        <div class="content-box content-box--grey">
+                            <h2 class="content-box__title">Journals Support</h2>
+                            <p class="content-box__text">Top-ranked and selected papers are invited and recommended by the conference for submission of extended versions to the following <strong>Inderscience</strong> journals <strong>[DBLP & SCOPUS indexed]:</strong></p>
+                            <ul class="journals-list__list">
+                                <li class="journals-list__item">
+                                    <p class="content-box__text"><em><a class="content-box__link" href="https://www.inderscience.com/jhome.php?jcode=ijcnds">International Journal of Communication Networks and Distributed Systems [IJCNDS]</a></em></p>
+                                    <p class="content-box__text"><strong>Indexed by:</strong> Scopus, Compendex, ACM, DBLP, Google Scholar, Inspec, and others.</p>
+                                </li>
+                                <li class="journals-list__item">
+                                    <p class="content-box__text"><em><a class="content-box__link" href="https://www.inderscience.com/jhome.php?jcode=IJCSE">International Journal of Computational Science and Engineering [IJCSE]</a></em></p>
+                                    <p class="content-box__text"><strong>Indexed by:</strong> ESCI, EI, Scopus, DBLP, ACM DL, and 10+ others.</p>
+                                </li>
+                                <li class="journals-list__item">
+                                    <p class="content-box__text"><em><a class="content-box__link" href="https://www.inderscience.com/jhome.php?jcode=IJES">International Journal of Embedded Systems [IJES]</a></em></p>
+                                    <p class="content-box__text"><strong>Indexed by:</strong> ESCI(by Clarivate Analytics), EI, Scopus, DBLP, ACM DL, and 10+ others.</p>
+                                </li>
+                                <li class="journals-list__item">
+                                    <p class="content-box__text"><em><a class="content-box__link" href="https://www.inderscience.com/jhome.php?jcode=ijhpcn">International Journal of High-Performance Computing and Networking [IJHPCN]</a></em></p>
+                                    <p class="content-box__text"><strong>Indexed by:</strong> EI, Scopus, DBLP, ACM DL, and 10+ others.</p>
+                                </li>
+                            </ul>
+                            <div class="journals-image">
+                                <a href="https://www.inderscience.com/jhome.php?jcode=ijcnds"><img src="img/scoverijcnds.jpg" alt="International Journal of Communication Networks and Distributed Systems" class="publication__image"></a>
+                                <a href="https://www.inderscience.com/jhome.php?jcode=IJCSE"><img src="img/scoverijcse.jpg" alt="International Journal of Computational Science and Engineering" class="publication__image"></a>
+                                <a href="https://www.inderscience.com/jhome.php?jcode=IJES"><img src="img/scoverijes.jpg" alt="International Journal of Embedded Systems" class="publication__image"></a>
+                                <a href="https://www.inderscience.com/jhome.php?jcode=ijhpcn"><img src="img/scoverijhpcn.jpg" alt="International Journal of High Performance Computing and Networking" class="publication__image"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="content-aside">
 aszie
