--- a/index.html
+++ b/index.html
@@ -183,6 +183,27 @@
                                 <button class="button aside-box__button">Submit</button>
                             </div>
                         </div>
+                        <div class="aside-box">
+                            <div class="aside-heading">
+                                <h3>Important Dates</h3>
+                            </div>
+                            <h4 class="aside-box__heading">Main Conference</h4>
+                            <p class="aside-box__important-item">Paper Submission</p>
+                            <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>30 SEP 2022</p>
+                            <p class="aside-box__important-item">Notification of Decision</p>
+                            <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>15 OCT 2022</p>
+                            <p class="aside-box__important-item">Author Registration & Submitting Camera Ready</p>
+                            <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>01 NOV 2022</p>
+                            
+                            <h4 class="aside-box__heading">Special Session</h4>
+                            <p class="aside-box__important-item">Paper Submission</p>
+                            <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>30 SEP 2022</p>
+                            <p class="aside-box__important-item">Notification of Decision</p>
+                            <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>15 OCT 2022</p>
+                            <p class="aside-box__important-item">Author Registration & Submitting Camera Ready</p>
+                            <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>01 NOV 2022</p>
+                        </div>
+                        
                     </div>
                 </div>
             </main>
@@ -241,7 +262,7 @@
             let seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
             // Display the result in the element with id="demo"
-            document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+            document.getElementById("countdown").innerHTML = days + "days " + hours + "h "
             + minutes + "m " + seconds + "s ";
 
             // If the count down is finished, write some text
