Designing home page sponsors section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,24 @@
                             <p class="aside-box__important-item">Author Registration & Submitting Camera Ready</p>
                             <p class="aside-box__important-date"><i class="fa-solid fa-calendar-days banner__icon"></i>01 NOV 2022</p>
                         </div>
-                        
+                        <div class="sponsor-container">
+                            <div class="sponsor-item">
+                                <p class="sponsor__title">Sponsored by</p>
+                                <img src="img/UBI_Logo.png" alt="Union Bank of India Logo" class="sponsor__image">
+                            </div>
+                            <div class="sponsor-item">
+                                <p class="sponsor__title">Conference Management</p>
+                                <img src="img/logoEC.png" alt="Easy Chair Logo" class="sponsor__image">
+                            </div>
+                            <div class="sponsor-item">
+                                <p class="sponsor__title">Publication Partner</p>
+                                <img src="img/springer-logo-transparent.png" alt="Springer Logo" class="sponsor__image">
+                            </div>
+                            <div class="sponsor-item">
+                                <p class="sponsor__title">Proceeding ICACIE 2021</p>
+                                <img src="img/Proceedings-ICACIE2021.jpg" alt="Proceeding ICACIE Cover" class="sponsor__image">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
