Designing speakers page panelist section

--- a/speakers.html
+++ b/speakers.html
@@ -55,6 +55,34 @@
                         </div>
                         <div class="speaker-page-heading">
                             <h2 class="speaker-page__title">Panelists in Industry Panel Discussion</h2>
+                            <h4 class="heading__subtitle">Topic</h4>
+                            <p class="heading__subtext">Pandemic – Turning Challenges into Opportunities</p>
+                        </div>
+                        <div class="panel-list">
+                            <div class="panel-item">
+                                <img src="img/profile-icon.jpg" alt="Panel member photo" class="panelist__photo">
+                                <div class="panel-detail">
+                                    <h1 class="panelist__name">Hemant Kumar Rath</h1>
+                                    <p class="panelist__text">Principal Scientist & Distinguished Engineer,</p>
+                                    <p class="panelist__text">TCS Research and Innovation Labs, India</p>
+                                </div>
+                            </div>
+                            <div class="panel-item">
+                                <div class="panel-detail">
+                                    <h1 class="panelist__name">Prasanta Panda</h1>
+                                    <p class="panelist__text">Senior Data Scientist,</p>
+                                    <p class="panelist__text">TCS Research and Innovation Labs, India</p>
+                                </div>
+                                <img src="img/profile-icon.jpg" alt="Panel member photo" class="panelist__photo">
+                            </div>
+                            <div class="panel-item">
+                                <img src="img/profile-icon.jpg" alt="Panel member photo" class="panelist__photo">
+                                <div class="panel-detail">
+                                    <h1 class="panelist__name">Soumitra Nanda</h1>
+                                    <p class="panelist__text">Co-founder and Director</p>
+                                    <p class="panelist__text">IG Smart Care Pvt. Ltd (SPECO.ai)</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -94,7 +122,6 @@
                 navbar.classList.remove("sticky");
             }
         }
-
     </script>
     <script src="https://kit.fontawesome.com/832a5f1165.js" crossorigin="anonymous"></script>
 </body>
