--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
         </header>
         <nav class="nav-top" id="navtop">
             <a href="index.html" class="nav__link">Home</a>
-            <a href="#" class="nav__link">About</a>
-            <a href="#" class="nav__link">Call for papers</a>
+            <a href="coming-soon.html" class="nav__link">About</a>
+            <a href="coming-soon.html" class="nav__link">Call for papers</a>
+            <a href="coming-soon.html" class="nav__link">Registration</a>
             <a href="speakers.html" class="nav__link">Keynotes/Speakers</a>
+            <a href="coming-soon.html" class="nav__link">Commitee</a>
+            <a href="coming-soon.html" class="nav__link">Gallery</a>
+            <a href="coming-soon.html" class="nav__link">Venue</a>
+            <a href="coming-soon.html" class="nav__link">Contact</a>
         </nav>
         <div class="content">
             <main class="conf-info">
@@ -159,11 +164,11 @@
                             <ul class="latest-news__list">
                                 <li class="latest-news__item">
                                     <p class="aside-box__text aside-box__text--main-text"><i class="fa-solid fa-angle-right aside-box__icon"></i>The list of accepted papers published.</p>
-                                    <p class="aside-box__text aside-box__text--details">Click <a href="" class="aside-box__link">here</a> for details.</p>
+                                    <p class="aside-box__text aside-box__text--details">Click <a href="coming-soon.html" class="aside-box__link">here</a> for details.</p>
                                 </li>
                                 <li class="latest-news__item">
                                     <p class="aside-box__text aside-box__text--main-text"><i class="fa-solid fa-angle-right aside-box__icon"></i>Submission of papers for ICACIE 2022 is open.</p>
-                                    <p class="aside-box__text aside-box__text--details">Click <a href="" class="aside-box__link">here</a> to submit your paper.</p>
+                                    <p class="aside-box__text aside-box__text--details">Click <a href="coming-soon.html" class="aside-box__link">here</a> to submit your paper.</p>
                                 </li>
                                 <li class="latest-news__item">
                                     <p class="aside-box__text aside-box__text--main-text"><i class="fa-solid fa-angle-right aside-box__icon"></i>The deadline for paper submission is extended to 30th September 2022 [Hard Deadline].</p>
@@ -177,7 +182,7 @@
                             <p class="aside-box__text aside-box__text--countdown-text">Submission of papers for ICACIE 2023 will be closed in</p>
                             <p class="aside-box__text aside-box__text--countdown" id="countdown"></p>
                             <div class="aside-box__button-container">
-                                <button class="button aside-box__button">Submit</button>
+                                <a href="coming-soon.html" class="button aside-box__button">Submit</a>
                             </div>
                         </div>
                         <div class="aside-box">
