--- a/speakers.html
+++ b/speakers.html
@@ -27,9 +27,14 @@
         </header>
         <nav class="nav-top" id="navtop">
             <a href="index.html" class="nav__link">Home</a>
-            <a href="#" class="nav__link">About</a>
-            <a href="#" class="nav__link">Call for papers</a>
+            <a href="coming-soon.html" class="nav__link">About</a>
+            <a href="coming-soon.html" class="nav__link">Call for papers</a>
+            <a href="coming-soon.html" class="nav__link">Registration</a>
             <a href="speakers.html" class="nav__link">Keynotes/Speakers</a>
+            <a href="coming-soon.html" class="nav__link">Commitee</a>
+            <a href="coming-soon.html" class="nav__link">Gallery</a>
+            <a href="coming-soon.html" class="nav__link">Venue</a>
+            <a href="coming-soon.html" class="nav__link">Contact</a>
         </nav>
         <div class="content">
             <main class="conf-info">
