--- a/speakers.html
+++ b/speakers.html
@@ -33,7 +33,7 @@
             <a href="speakers.html" class="nav__link">Keynotes/Speakers</a>
             <a href="coming-soon.html" class="nav__link">Commitee</a>
             <a href="coming-soon.html" class="nav__link">Gallery</a>
-            <a href="coming-soon.html" class="nav__link">Venue</a>
+            <a href="venue.html" class="nav__link">Venue</a>
             <a href="coming-soon.html" class="nav__link">Contact</a>
         </nav>
         <div class="content">
