--- a/venue.html
+++ b/venue.html
@@ -52,14 +52,33 @@
                     <div class="content-main">
                         <h1 class="venue-page__title">Conference Venue</h1>
                         <div class="venue-box">
-                            <div class="venue-banner"></div>
+                            <div class="venue-banner venue-banner--ravenala"></div>
                             <div class="venue-box-content">
                                 <h2 class="venue-box-content__title">The Ravenala Attitude Hotel</h2>
                                 <p class="venue-box-content__text">Secluded on north-west coast of Mauritius, in the small village of Balaclava, the Ravenala Attitude hotel is an ode to the art of tropical living. The name, 'Ravenala', is the first taste of tropical exploration, as it refers to the traveller's tree (or traveller's palm) - easily spotted thanks to its fabulous, fan-shaped collection of long leaves.</p>
                                 <a class="button venue-box-content__button" href="https://hotels-attitude.com/en/the-ravenala-attitude">Hotel Website</a>
                             </div>
                         </div>
-                        
+                        <h1 class="venue-page__title">Host Institution</h1>
+                        <div class="venue-box">
+                            <div class="venue-banner venue-banner--udm"></div>
+                            <div class="venue-box-content">
+                                <h2 class="venue-box-content__title">Université des Mascareignes</h2>
+                                <p class="venue-box-content__text">Université des Mascareignes (UdM) was set up in 2012 and is the youngest public University in Mauritius, under the aegis of the Ministry of Education, Tertiary Education, Science and Technology.</p>
+                                <p class="venue-box-content__text">It provides undergraduate and postgraduate programmes in Sustainable Development and Engineering, in Business and Management and in Information and Communication Technology.</p>
+                                <a class="button venue-box-content__button" href="https://www.udm.ac.mu/">University Website</a>
+                            </div>
+                        </div>
+                        <h1 class="venue-page__title">Host Country</h1>
+                        <div class="venue-box">
+                            <div class="venue-banner venue-banner--mauritius"></div>
+                            <div class="venue-box-content">
+                                <h2 class="venue-box-content__title">Mauritius</h2>
+                                <p class="venue-box-content__text">Mauritius is a small island in the Indian Ocean. It is a dream holiday destination for tourists from all over the world.</p>
+                                <p class="venue-box-content__text">The beauty of Mauritius is beyond words. Rich with lush forests, spectacular waterfalls, unique wildlife, rocky mountains, white sandy beaches and breathtaking crystal clear turquoise lagoons. All complemented by a multi-ethnic and cultural population renowned world-wide for its warm hospitality.</p>
+                                <a class="button venue-box-content__button" href="https://www.mymauritius.travel/">Find out more</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
