Adding accomodation page

--- a/travel.html
+++ b/travel.html
@@ -45,7 +45,7 @@
                 </div>
                 <nav class="nav-top">
                     <a href="travel.html" class="nav__link"><i class="fa-solid fa-plane-departure"></i> Travel</a>
-                    <a href="coming-soon.html" class="nav__link"><i class="fa-solid fa-bed"></i> Accommodation</a>
+                    <a href="accomodation.html" class="nav__link"><i class="fa-solid fa-bed"></i> Accommodation</a>
                     <a href="coming-soon.html" class="nav__link"><i class="fa-solid fa-route"></i> Sightseeing</a>
                 </nav>
                 <div class="home-content">
